# howareyou

./: CMakeLists.txt  README.md  main.cpp
build-openssl/: CMakeLists.txt
include/: tokenizer.h
include/nlp/: sentencevectormap.h  wordvectormap.h
openai/: openai.h
src/: main.cpp  sentencevectormap.cpp  tokenizer.cpp  wordvectormap.cpp
